# dndocstrings

./: README.md  pyproject.toml
dndocstrings/: __init__.py  docstrings.py
